--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=https://6d3ae8d3-e8ce-46bb-85d0-3205fc5a0b8e.preview.emergentagent.com
